# atlas_ia

./: .gitignore  README  pyproject.toml
atlas/: cli.py  config.py  guardrails.py  llm.py  memory.py  monitoring.py
config/: atlas.yml  guardrails.yaml
docs/: Installation.md  README_final  configuration.md  gouvernance.md  monitoring.md  operation.md  security.md
scripts/: analyze_traces.py  context_window_test.py
tests/: test_config.py  test_guardrails.py  test_monitoring.py
