[project]
name = "atlas"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "typer>=0.12"]

[project.scripts]
atlas-chat = "atlas.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "chromadb>=0.5",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "pydantic>=2.0",   # ← S4
]